# creative-agent

./: .gitignore  DESCRIPTION.md  README.md  SKILLS.md  _manifest.yaml  package.json
L0-foundation/creative-gpt-image2-prompt/: SKILL.md
L0-foundation/creative-job-runner/: SKILL.md
L0-foundation/creative-narrative-router/: SKILL.md
L0-foundation/creative-platform/: SKILL.md
L0-foundation/creative-seedance2-prompt/: SKILL.md
L0-foundation/creative-task-runner/: SKILL.md
L1-capability/creative-batch-orchestrator/: SKILL.md
L1-capability/creative-direct/: SKILL.md
L1-capability/creative-script2film/: SKILL.md
L1-capability/creative-script2film-keyframes/: SKILL.md
L1-capability/jianying-remix/: SKILL.md
L2-vertical/handheld-product-avatar/: SKILL.md
L2-vertical/product-image-to-jianying-remix/: SKILL.md
docs/: DIRECTOR_AD_RHYTHM_SKILL_PLAN.md  HANDHELD_AVATAR_PRODUCT_SKILL_PLAN.md  MCP_SETUP.md  SETUP.md  SKILLS_SETUP.md  SKILL_ROUTING.md
scripts/: build-well-known-skills.mjs  install-hermes-skills.mjs  install-skills.mjs  validate-skills.mjs
tools/: .gitignore  install-jy-compile.sh
tools/jianying-draft-compiler/: .gitignore  NOTICE  README.md  pyproject.toml
tools/jianying-draft-compiler/examples/: fashion_5clip_rich.json  p0_demo.json
tools/jianying-draft-compiler/scripts/: install_local.sh  sync_vendor.sh
tools/jianying-draft-compiler/src/jianying_draft_compiler/: __init__.py  api.py  catalog.py  cli.py  compile.py  export.py  import_draft.py  media.py  models.py  package.py  paths.py  text_style.py
(+22 files in other folders)
