[project]
name = "jianying-draft-compiler"
version = "0.2.0"
description = "VidAU: Edit Plan → CapCut/Jianying draft + Windows RPA export"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.100.0",
  "pydantic>=2.0.0",
  "pymediainfo>=7.0.0",
  "requests>=2.32.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
windows = [
  "pywin32>=311; sys_platform == 'win32'",
  "pyautogui>=0.9.54; sys_platform == 'win32'",
  "uiautomation>=2.0.29; sys_platform == 'win32'",
]

[project.scripts]
jy-compile = "jianying_draft_compiler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jianying_draft_compiler"]

[tool.hatch.build.targets.sdist]
include = [
  "src/jianying_draft_compiler",
  "vendor/pyJianYingDraft",
  "vendor/template_default2",
  "examples",
  "scripts",
  "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "vendor"]
addopts = "-q"
